<resources>

    <string name="app_name">Car Mechanic Workshop</string>
    <string name="mechanic_workshop">Mechanic Workshop</string>


    <!--main activity texts-->
    <string name="mechanic_workshop_button">Mechanic Workshop</string>
    <string name="dashboard_lights_button">Dashboard Lights</string>
    <string name="ask_mechanic_button">Ask Mechanic</string>
    <string name="main_button_font_family">casual</string>

    <!--AdUnitId-->
    <string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string>

    <!--First Install activity texts-->
    <string name="welcome_to">Welcome to</string>
    <string name="automobile">Car Mechanic</string>
    <string name="garage_technique">Workshop</string>
    <string name="by">***** by *****</string>
    <string name="automobile_garage_technique">AutomobileGT.com</string>
    <string name="sample_aula_and_privacy_policy"><![CDATA[<p>By using this software, you agree with our <a href="https://agt-app.automobilegt.com/PrivacyPolicy.html" color="#E41A6E">Privacy Policy</a> and with our <a href="https://agt-app.automobilegt.com/TermsAndConditions.html" color="#E41A6E">Terms and Conditions</a> of downloading or using the app.</p>]]></string>
    <string name="get_started">Get Started</string>
    <string name="accept_started">Check the box to Accept and get Started</string>


    <!--DashboardWarningLight activity texts-->
    <string name="red_warning_light_button">red warning light symbols</string>
    <string name="orange_warning_light_button">yellow/orange warning light symbols</string>
    <string name="green_warning_light_button">green warning light symbols</string>
    <string name="dashboard_warning_light_text">
        <![CDATA[
    <p>Color <font color="#EE0000">RED</font> indicates a potentially serious problem or safety issue. Attend to it! Red may also indicate an important reminder.</p>
    <p>Color <font color="#fbe332">YELLOW</font> or <font color="#f4993e">ORANGE</font> mean something needs to be serviced or repaired soon. If it is flashing, it is important that you contact your dealer or trusted repair shop.</p>
    <p>Color <font color="#39a0fb">BLUE</font> or <font color="#28cb12">GREEN</font> is only telling you that a system is on or operating.</p>
        ]]>
    </string>

    <string name="about">About</string>
    <string name="play_video">Play Video</string>
    <string name="back_home">Back Home</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="my_favorite">My Favorite</string>
    <string name="share_video">Share Your Video</string>
    <string name="car_brand_video_shared">Car Brand</string>
    <string name="car_model_video_shared">Car Model</string>
    <string name="car_year_video_shared">Car Year</string>
    <string name="car_link_video_shared">Video Link</string>
    <string name="symbol_image">symbol image</string>

    <!--Version 3 String-->
    <string name="no_internet_connection">No internet found. Please check your internet connection and try again.</string>
    <string name="car_brand_name">Car Brand Name</string>
    <string name="right_arrow">Right arrow</string>
    <string name="car_brand_logo">Car brand logo</string>
    <string name="warning_light_title">Warning Light Title</string>
    <string name="warning_light_symbol">Warning light symbol</string>
    <string name="no_connect_server">Unable to connect the server, please closed the app and try again.</string>
    <string name="action_suggest_video">Suggest video</string>
    <string name="extended_fab_add_video">fab Button: Suggest Video</string>
    <string name="extended_fab_label">Suggest Video</string>
</resources>