<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rv_row_warning_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/adapter_warning_light_icon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:padding="8dp"
        android:contentDescription="@string/warning_light_symbol" />

    <TextView
        android:id="@+id/adapter_warning_light_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/warning_light_title"
        android:textColor="#FBF8F8" />

    <ImageView
        android:id="@+id/adapter_play_arrow_image_view"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:padding="10dp"
        android:contentDescription="@string/right_arrow" />

</LinearLayout>