<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    android:padding="8dp"
    tools:context=".WarningLightActivity">

    <ScrollView
        android:id="@+id/scrollview_DashboardWarningLightActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:layout_gravity="start">

            <TextView
                android:id="@+id/dashboard_warning_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <Button
                android:id="@+id/red_light_button"
                style="@style/WarningLightButtonStyle"
                android:background="@android:color/holo_red_dark"
                android:tag="red"
                android:onClick="warningLightSymbols"
                android:text="@string/red_warning_light_button"/>

            <Button
                android:id="@+id/orange_light_button"
                style="@style/WarningLightButtonStyle"
                android:background="@android:color/holo_orange_dark"
                android:tag="orange"
                android:onClick="warningLightSymbols"
                android:text="@string/orange_warning_light_button"/>

            <Button
                android:id="@+id/blue_light_button"
                style="@style/WarningLightButtonStyle"
                android:background="@android:color/holo_green_dark"
                android:tag="green"
                android:onClick="warningLightSymbols"
                android:text="@string/green_warning_light_button" />

        </LinearLayout>
    </ScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitId"/>
</RelativeLayout>