<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/mechanic_workshop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_button_marginStart"
        android:layout_marginTop="@dimen/main_button_marginTop"
        android:layout_marginEnd="@dimen/main_button_marginEnd"
        android:background="@drawable/main_button_state"
        android:fontFamily="@string/main_button_font_family"
        android:text="@string/mechanic_workshop_button"
        android:textColor="@color/mainButtonTextColor"
        android:textSize="@dimen/main_button_textSize"
        android:onClick="carMakerList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/car_dashboard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_button_marginStart"
        android:layout_marginTop="@dimen/main_button_marginTop"
        android:layout_marginEnd="@dimen/main_button_marginEnd"
        android:background="@drawable/main_button_state"
        android:fontFamily="@string/main_button_font_family"
        android:text="@string/dashboard_lights_button"
        android:textColor="@color/mainButtonTextColor"
        android:textSize="@dimen/main_button_textSize"
        android:onClick="dashboardLights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mechanic_workshop_button" />

    <Button
        android:id="@+id/ask_mechanic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_button_marginStart"
        android:layout_marginTop="@dimen/main_button_marginTop"
        android:layout_marginEnd="@dimen/main_button_marginEnd"
        android:background="@drawable/main_button_state"
        android:fontFamily="@string/main_button_font_family"
        android:text="@string/ask_mechanic_button"
        android:textColor="@color/mainButtonTextColor"
        android:textSize="@dimen/main_button_textSize"
        android:onClick="askMechanic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_dashboard_button" />

</androidx.constraintlayout.widget.ConstraintLayout>